@@ -50,7 +50,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * ChannelFactory
@@ -742,6 +741,18 @@ public class ChannelFactory extends HibernateFactory {
     }
 
     /**
+     * Get cloned errata ids for a channel
+     * @param cid the channel id
+     * @return List of errata ids
+     */
+    public static List<Long> getClonedErrataIds(Long cid) {
+        if (cid == null) {
+            return new ArrayList<>();
+        }
+        return singleton.listObjectsByNamedQuery("Channel.getClonedErrataOriginalIdList", Map.of("cid", cid));
+    }
+
+    /**
      * Looksup the number of Packages in a channel
      * @param channel the Channel who's package count you are interested in.
      * @return number of packages in this channel.
@@ -930,7 +941,7 @@ public class ChannelFactory extends HibernateFactory {
                 .stream()
                 .map(Arrays::asList)
                 .map(r -> new SsmChannelDto((long)r.get(0), (String)r.get(1), r.get(2) != null))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
