@@ -143,7 +143,7 @@ public class SUSEProductFactory extends HibernateFactory {
         return ((List<SUSEProductSCCRepository>) c.list()).stream()
                 .sorted((a, b) ->
                         RPM_VERSION_COMPARATOR.compare(b.getProduct().getVersion(), a.getProduct().getVersion()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -185,7 +185,7 @@ public class SUSEProductFactory extends HibernateFactory {
     @SuppressWarnings("unchecked")
     public static void removeAllExcept(Collection<SUSEProduct> products) {
         if (!products.isEmpty()) {
-            Collection<Long> ids = products.stream().map(SUSEProduct::getId).collect(Collectors.toList());
+            Collection<Long> ids = products.stream().map(SUSEProduct::getId).toList();
 
             Criteria c = getSession().createCriteria(SUSEProduct.class);
             c.add(Restrictions.not(Restrictions.in("id", ids)));
@@ -205,7 +205,7 @@ public class SUSEProductFactory extends HibernateFactory {
     public static List<SUSEProductChannel> lookupSyncedProductChannelsByLabel(String channelLabel) {
         return Optional.ofNullable(ChannelFactory.lookupByLabel(channelLabel))
                 .map(channel -> channel.getSuseProductChannels().stream())
-                .orElseGet(Stream::empty).collect(Collectors.toList());
+                .orElseGet(Stream::empty).toList();
     }
 
     /**
@@ -302,7 +302,7 @@ public class SUSEProductFactory extends HibernateFactory {
                     List<String> selectedParts = List.of(channel.getLabel().split("-"));
                     List<String> uniqueParts = selectedParts.stream()
                             .filter(s -> !originalParts.contains(s))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     if (channel.isBaseChannel()) {
                         return Stream.<Channel>empty();
@@ -547,6 +547,21 @@ public class SUSEProductFactory extends HibernateFactory {
     }
 
     /**
+     * Return all {@link SUSEProductExtension} of the given root product which are recommended
+     * @param root the root product
+     * @return SUSEProductExtensions which are recommended for the given root product
+     */
+    public static List<SUSEProductExtension> allRecommendedExtensionsOfRoot(SUSEProduct root) {
+        return getSession().createQuery("""
+                FROM SUSEProductExtension
+               WHERE recommended = true
+                 AND rootProduct = :root
+               """, SUSEProductExtension.class)
+                .setParameter("root", root)
+                .list();
+    }
+
+    /**
      * Find all {@link SUSEProductChannel} relationships.
      * @return list of SUSE product channel relationships
      */
@@ -752,7 +767,7 @@ public class SUSEProductFactory extends HibernateFactory {
                 "JOIN SUSEProduct ext ON x.extensionProduct = ext " +
                 "JOIN SUSEProductChannel pc ON pc.product = ext " +
                 "JOIN pc.channel.packages pkg " +
-                "WHERE pkg.packageName.name LIKE 'kernel-default%' " +
+                "WHERE pkg.packageName.name = 'kernel-default' " +
                 "AND x.rootProduct = :product", PackageEvr.class)
                 .setParameter("product", product)
                 .getResultStream();
