@@ -895,7 +895,7 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<ServerGroupType> getEntitledGroupTypes() {
         return this.groups.stream().filter(g ->g.getGroupType() != null)
-                .map(ServerGroup::getGroupType).collect(Collectors.toList());
+                .map(ServerGroup::getGroupType).toList();
     }
 
     /**
@@ -904,7 +904,7 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<EntitlementServerGroup> getEntitledGroups() {
         return this.groups.stream().filter(g ->g.getGroupType() != null)
-                .map(s -> (EntitlementServerGroup) s).collect(Collectors.toList());
+                .map(s -> (EntitlementServerGroup) s).toList();
     }
 
     /**
@@ -913,7 +913,8 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     public List<ManagedServerGroup> getManagedGroups() {
         return this.groups.stream().filter(g -> g.getGroupType() == null)
-                .map(s -> (ManagedServerGroup) s).collect(Collectors.toList());
+                .map(s -> (ManagedServerGroup) s)
+                .collect(Collectors.toList());
     }
 
     /**
@@ -1768,10 +1769,9 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     @Override
     public boolean equals(final Object other) {
-        if (!(other instanceof Server)) {
+        if (!(other instanceof Server castOther)) {
             return false;
         }
-        Server castOther = (Server) other;
 
         Optional<PackageEvr> proxyVersion =
                 Optional.ofNullable(proxyInfo).map(ProxyInfo::getVersion);
@@ -2417,9 +2417,12 @@ public class Server extends BaseDomainHelper implements Identifiable {
      * @return <code>true</code> if OS supports monitoring
      */
     public boolean doesOsSupportsMonitoring() {
-        return isSLES12() || isSLES15() || isLeap15() || isUbuntu1804() || isUbuntu2004() || isUbuntu2204() ||
-                isRedHat6() || isRedHat7() || isRedHat8() || isAlibaba2() || isAmazon2() || isAmazon2023() ||
-                isRocky8() || isRocky9() || isDebian12() || isDebian11() || isDebian10();
+        return isSLES12() || isSLES15() || isLeap15() || isLeapMicro() ||
+                isSLEMicro5() || // Micro 6 miss the node exporter
+                isUbuntu1804() || isUbuntu2004() || isUbuntu2204() || isUbuntu2404() ||
+                isRedHat6() || isRedHat7() || isRedHat8() || isRedHat9() || // isRedHat catch also Rocky and Alma
+                isAlibaba2() || isAmazon2() || isAmazon2023() ||
+                isDebian10() || isDebian11() || isDebian12();
     }
 
     /**
@@ -2428,7 +2431,14 @@ public class Server extends BaseDomainHelper implements Identifiable {
      * @return <code>true</code> if OS supports PTF uninstallation
      */
     public boolean doesOsSupportPtf() {
-        return ServerConstants.SLES.equals(getOs());
+        return ServerConstants.SLES.equals(getOs()) || isSLEMicro();
+    }
+
+    boolean isSLES() {
+        return ServerConstants.SLES.equalsIgnoreCase(getOs());
+    }
+    boolean isSLED() {
+        return ServerConstants.SLED.equalsIgnoreCase(getOs());
     }
 
     /**
@@ -2463,10 +2473,24 @@ public class Server extends BaseDomainHelper implements Identifiable {
     }
 
     /**
-     * @return true if the installer type is of SLE Micro
+     * @return true if the installer type is of SLE Micro (version independent)
      */
     boolean isSLEMicro() {
         return ServerConstants.SLEMICRO.equals(getOs()) || ServerConstants.SLMICRO.equals(getOs());
+    }
+
+    /**
+     * @return true if the installer type is of SLE Micro 5
+     */
+    boolean isSLEMicro5() {
+        return ServerConstants.SLEMICRO.equals(getOs()) && getRelease().startsWith("5.");
+    }
+
+    /**
+     * @return true if the installer type is of SE Micro 6
+     */
+    boolean isSEMicro6() {
+        return ServerConstants.SLMICRO.equals(getOs()) && getRelease().startsWith("6.");
     }
 
     /**
@@ -2474,6 +2498,10 @@ public class Server extends BaseDomainHelper implements Identifiable {
      */
     boolean isSLES15() {
         return ServerConstants.SLES.equals(getOs()) && getRelease().startsWith("15");
+    }
+
+    boolean isLeap() {
+       return ServerConstants.LEAP.equalsIgnoreCase(getOs());
     }
 
     boolean isLeap15() {
@@ -2494,6 +2522,10 @@ public class Server extends BaseDomainHelper implements Identifiable {
         return ServerConstants.OPENSUSEMICROOS.equals(getOs());
     }
 
+    boolean isUbuntu() {
+        return ServerConstants.UBUNTU.equalsIgnoreCase(getOs());
+    }
+
     boolean isUbuntu1804() {
         return ServerConstants.UBUNTU.equals(getOs()) && getRelease().equals("18.04");
     }
@@ -2506,6 +2538,14 @@ public class Server extends BaseDomainHelper implements Identifiable {
         return ServerConstants.UBUNTU.equals(getOs()) && getRelease().equals("22.04");
     }
 
+    boolean isUbuntu2404() {
+        return ServerConstants.UBUNTU.equals(getOs()) && getRelease().equals("24.04");
+    }
+
+    boolean isDebian() {
+        return ServerConstants.DEBIAN.equalsIgnoreCase(getOs());
+    }
+
     boolean isDebian12() {
         return ServerConstants.DEBIAN.equals(getOs()) && getRelease().equals("12");
     }
@@ -2516,6 +2556,10 @@ public class Server extends BaseDomainHelper implements Identifiable {
 
     boolean isDebian10() {
         return ServerConstants.DEBIAN.equals(getOs()) && getRelease().equals("10");
+    }
+
+    boolean isRHEL() {
+        return ServerConstants.RHEL.equals(getOs());
     }
 
     /**
