@@ -55,7 +55,7 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -231,7 +231,7 @@ public class BaseSubscribeAction extends RhnLookupDispatchAction {
                             "basesub.jsp.unableToLookupSystemDefaultChannelWithParams",
                             String.join(", ", skippedServers.stream()
                                     .map(s -> "'" + s.getName() + "'")
-                                    .collect(Collectors.toList())), oldBaseChannelMessage);
+                                    .toList()), oldBaseChannelMessage);
                     msgs.add(ActionMessages.GLOBAL_MESSAGE, actionMessage);
                     strutsDelegate.saveMessages(request, msgs);
 
@@ -464,7 +464,7 @@ public class BaseSubscribeAction extends RhnLookupDispatchAction {
             //  change the systems base channel
             Channel c = ChannelFactory.lookupById(spc.getId());
 
-            List<EssentialChannelDto> compatibles = ChannelManager.listCompatibleBaseChannelsForChannel(user, c);
+            Set<EssentialChannelDto> compatibles = ChannelManager.listCompatibleBaseChannelsForChannel(user, c);
             log.debug("Sorting channels: {}", compatibles.size());
             List<EssentialChannelDto> rhn = new ArrayList<>();
             List<EssentialChannelDto> custom = new ArrayList<>();
