@@ -53,7 +53,6 @@ import java.util.Date;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -102,7 +101,7 @@ public class ErrataListConfirmAction extends RhnAction implements
         User user = context.getCurrentUser();
         return SystemManager.inSet(user, SetLabels.SYSTEM_LIST).stream()
                 .map(SystemOverview::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ActionForward handleDispatch(
