@@ -59,8 +59,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+// TODO: Test for when patch status is unknown
 public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
     public static final String CPE_OPENSUSE_LEAP_15_4 = "cpe:/o:opensuse:leap:15.4";
     private OvalParser ovalParser = new OvalParser();
@@ -87,7 +87,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -122,7 +122,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -156,7 +156,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -194,7 +194,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -229,7 +229,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -272,7 +272,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -314,7 +314,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -361,7 +361,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         HibernateFactory.getSession().flush();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -411,7 +411,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         HibernateFactory.getSession().flush();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -453,7 +453,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -486,7 +486,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .collect(Collectors.toList());
+                .toList();
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
