@@ -46,6 +46,7 @@ import java.text.MessageFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -102,7 +103,7 @@ public class RouteFactory {
         return Collectors.collectingAndThen(
                 Collectors.toList(),
                 list -> {
-                    list = list.stream().filter(Objects::nonNull).collect(Collectors.toList());
+                    list = list.stream().filter(Objects::nonNull).toList();
                     if (list.size() > 1) {
                         throw new IllegalStateException("Multiple items found.");
                     }
@@ -289,6 +290,7 @@ public class RouteFactory {
      */
     private Gson initGsonWithSerializers() {
         GsonBuilder builder = new GsonBuilder()
+                .registerTypeAdapter(Date.class, new DateSerializer())
                 .registerTypeAdapter(Map.class, new MapDeserializer())
                 .registerTypeAdapter(List.class, new ListDeserializer());
 
