@@ -52,7 +52,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -298,7 +297,7 @@ public class ImageStoreController {
         List<ImageStore> imageStores = ImageStoreFactory.listImageStores(user.getOrg())
                 .stream()
                 .filter(s -> s.getStoreType().equals(ImageStoreFactory.TYPE_REGISTRY))
-                .collect(Collectors.toList());
+                .toList();
 
         return json(res, getJsonList(imageStores), new TypeToken<>() { });
     }
@@ -410,7 +409,7 @@ public class ImageStoreController {
             json.addProperty("uri", uriPrefix + imageStore.getUri());
             json.addProperty("type", imageStore.getStoreType().getLabel());
             return json;
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     private static void setStoreCredentials(ImageStore store, ImageStoreCreateRequest request) {
