@@ -48,7 +48,6 @@ import org.apache.http.HttpStatus;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -93,7 +92,7 @@ public class PackageController {
     }
 
     private static Object data(Request request, Response response, User user) {
-        PageControlHelper pageHelper = new PageControlHelper(request, "server_name");
+        PageControlHelper pageHelper = new PageControlHelper(request, "nvrea");
 
         boolean source = request.params(":binary").equals("source");
         String kind = request.params(":kind");
@@ -124,7 +123,7 @@ public class PackageController {
 
             return json(response, packages.stream()
                     .map(PackageOverview::getId)
-                    .collect(Collectors.toList()), new TypeToken<>() { });
+                    .toList(), new TypeToken<>() { });
         }
 
         DataResult<PackageOverview> packages = PackageManager.listCustomPackages(user.getOrg().getId(), source, pc);
@@ -157,7 +156,7 @@ public class PackageController {
 
             return json(response, packages.stream()
                     .map(PackageOverview::getId)
-                    .collect(Collectors.toList()), new TypeToken<>() { });
+                    .toList(), new TypeToken<>() { });
         }
 
         DataResult<PackageOverview> packages = PackageManager.listOrphanPackages(user.getOrg().getId(), source, pc);
@@ -196,7 +195,7 @@ public class PackageController {
 
                 return json(response, packages.stream()
                         .map(PackageOverview::getId)
-                        .collect(Collectors.toList()), new TypeToken<>() { });
+                        .toList(), new TypeToken<>() { });
             }
 
             DataResult<PackageOverview> packages = PackageManager.listCustomPackageForChannel(
