@@ -57,7 +57,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 import java.util.stream.Stream;
 
 import spark.Request;
@@ -107,18 +107,17 @@ public class SsmController {
             SsmAllowedBaseChannelsJson allowedBaseJson = new SsmAllowedBaseChannelsJson();
             allowedBaseJson.setBase(new SsmChannelDto(c.getId(), c.getName(), c.isCustom()));
 
-            List<EssentialChannelDto> compatibles = ChannelManager
-                    .listCompatibleBaseChannelsForChannel(user, c);
+            Set<EssentialChannelDto> compatibles = ChannelManager.listCompatibleBaseChannelsForChannel(user, c);
 
             allowedBaseJson.setAllowedBaseChannels(
                 compatibles.stream().map(cc ->
                         new SsmChannelDto(
                                 cc.getId(), cc.getName(), cc.isCustom()))
-                        .collect(Collectors.toList()));
+                        .toList());
             List<Server> serversByChannel = SsmManager.findServersInSetByChannel(user, c.getId());
             allowedBaseJson.setServers(serversByChannel.stream()
                     .map(s -> new SsmServerDto(s.getId(), s.getName()))
-                    .collect(Collectors.toList()));
+                    .toList());
             result.add(allowedBaseJson);
         }
 
@@ -149,11 +148,11 @@ public class SsmController {
                         ChannelFactory.listCompatibleBasesForSSMNoBaseInNullOrg(user).stream())
                         .map(c ->
                             new SsmChannelDto(c.getId(), c.getName(), c.isCustom()))
-                        .collect(Collectors.toList());
+                        .toList();
             rslt.setAllowedBaseChannels(allowed);
             rslt.setServers(noBase.stream()
                     .map(s -> new SsmServerDto(s.getId(), s.getName()))
-                    .collect(Collectors.toList()));
+                    .toList());
             return Optional.of(rslt);
 
         }
