@@ -33,13 +33,15 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 /**
  * This class is responsible for cleaning OVAL resources and filling up missing data. It acts as an adapter that takes
  * OVAL data from multiple sources and make changes to it to have a more predictable format.
  */
 public class OVALCleaner {
+
     private OVALCleaner() {
     }
 
@@ -58,9 +60,8 @@ public class OVALCleaner {
             root.getDefinitions().removeIf(def -> def.getId().contains("unaffected"));
         }
 
-        if (osFamily == OsFamily.DEBIAN || osFamily == OsFamily.SUSE_LINUX_ENTERPRISE_SERVER ||
-                osFamily == OsFamily.SUSE_LINUX_ENTERPRISE_DESKTOP || osFamily == OsFamily.LEAP) {
-            // For the above OS families, we only need OVAL vulnerability definitions
+        // Debian OVAL files could contain patch definitions, but we're only interested in vulnerability definitions
+        if (osFamily == OsFamily.DEBIAN) {
             root.getDefinitions().removeIf(def -> def.getDefinitionClass() != DefinitionClassEnum.VULNERABILITY);
         }
 
@@ -83,16 +84,28 @@ public class OVALCleaner {
         }
     }
 
+    private static final Pattern EXTRACT_CVE_REGEX = Pattern.compile(".{0,30}(CVE-\\d{4}-\\d+).{0,30}");
+
     private static void fillCves(DefinitionType definition, OsFamily osFamily) {
         switch (osFamily) {
             case REDHAT_ENTERPRISE_LINUX:
             case LEAP:
+            case LEAP_MICRO:
             case SUSE_LINUX_ENTERPRISE_SERVER:
             case SUSE_LINUX_ENTERPRISE_DESKTOP:
+            case SUSE_LINUX_ENTERPRISE_MICRO:
                 List<String> cves =
                         definition.getMetadata().getAdvisory().map(Advisory::getCveList)
                                 .orElse(Collections.emptyList())
-                                .stream().map(AdvisoryCveType::getCve).collect(Collectors.toList());
+                                .stream().map(AdvisoryCveType::getCve)
+                                .map(cve -> {
+                                    Matcher matcher = EXTRACT_CVE_REGEX.matcher(cve);
+                                    if (matcher.find()) {
+                                        return matcher.group(1);
+                                    }
+
+                                    return "";
+                                }).filter(StringUtils::isNotBlank).toList();
                 definition.setCves(cves);
                 break;
             case DEBIAN:
@@ -103,7 +116,7 @@ public class OVALCleaner {
         }
 
         List<String> cleanCves = definition.getCves().stream().map(OVALCleaner::removeWhitespaceChars)
-                .collect(Collectors.toList());
+                .toList();
 
         definition.setCves(cleanCves);
     }
@@ -141,14 +154,15 @@ public class OVALCleaner {
     }
 
     /**
-     * Debian Ids are not unique among different versions, so it's possible to have OVAL constructs that have the
-     * same id but different content for different versions of Debian.
-     * <p>
-     * To work around this, we insert the codename of the version into the id string
+     * Debian Ids are not unique among different versions. For example, it is possible to find an OVAL test with
+     * {@code id = "1"} in the OVAL file of debian buster and debian bullseye. This would create a conflict between
+     * the two tests.
+     * To work around this and to have globally unique IDs for OVAL tests, we insert the codename of the version into
+     * the id string.
      */
     private static void convertDebianTestRefs(BaseCriteria root, String osVersion) {
-        if (root instanceof CriteriaType) {
-            for (BaseCriteria criteria : ((CriteriaType) root).getChildren()) {
+        if (root instanceof CriteriaType criteriaType) {
+            for (BaseCriteria criteria : (criteriaType).getChildren()) {
                 convertDebianTestRefs(criteria, osVersion);
             }
         }
